# medianator

./: .env.example  .gitignore  CLAUDE.md  CREDITS.txt  Cargo.toml  README.md  README_TRANSCRIPTION.md  SUB_IMAGE_EXTRACTION_GUIDE.md  build-with-opencv-rust.sh  build-with-opencv.sh  check_faces.sh  download_models.sh  download_opencv_models.sh  extract_polaroids.py  install_whisper.sh  run-with-opencv.sh  run_with_detection.sh  run_with_faces.sh  test_all_fixes.html  test_face_detection.sh  test_face_overlay.html  test_opencv_collage.py  test_opencv_integration.sh  test_sub_image_detection.py  test_sub_images.sh  test_whisperx.sh  test_whisperx_simple.sh
.sqlx/: query-00de142773056e473024780f53e41db6390a89e34ce75baab53672d54ac9f459.json  query-06436fd630ace7de688e7a7510db2ca178d7f0dc43cf8af355f5363f2bc97c5a.json  query-1852dd2cdfb56bd73618f4e2dcf7ec8f2130cf2957c007caf65f04075a521700.json  query-2beb64b1bf90a67c69a2f42bd006733b487faafe054c550d71de3a95aa67290f.json  query-3ae7ff7fe921d77cc9764dde750af16741ff2a2dd4aac7223dc3cdebfe86cc6e.json  query-4b38c5e0f1be16b7dc3bf18f95350ac8f686e92d8d6b7c66a31bc25936a07d40.json  query-5cbb252319773e56e1539af10ef608268f21f46b5d920067d4e5295a78810e26.json  query-6d2aa3f123ef136ce47cce21765a2bad80c7d9ac705a52a672f6ef7c18e190bf.json  query-7868aad07c9cd43e07a6e8755b0f2922ec60045f05fa6b4f3d9721e4aaa18888.json  query-83d290cd18b55617ef40a141a3a5eb5b4fb1dd0462e394a4116b9bf5fc691d28.json  query-85716e4be3483bf4e7b70b408b23318e1eaec6b571564ac10ef7c1341c043856.json  query-897ee7f91cf765e081258fcccafebe63b9d3ee1a6640749a6a5565ce5a01c9c0.json  (+13 more)
(+47 files in other folders)
