[package]
name = "medianator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Media metadata extraction
image = "0.25"
kamadak-exif = "0.5"
symphonia = { version = "0.5", features = ["all"] }
mp4 = "0.14"

# Thumbnail generation
imageproc = "0.25"

# Face recognition
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
ndarray = "0.16"

# File handling
walkdir = "2.5"
mime_guess = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.14"

# Metrics
prometheus = "0.13"
lazy_static = "1.5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Hashing
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.12"